--- a/index.html
+++ b/index.html
@@ -3,38 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ETH LUCKY奖池</title>
+    <title>LUCKYE</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="lottery-container">
-        <header>
-            <h1>ETH LUCKY奖池</h1>
-        </header>
-        <section class="jackpot-section">
-            <div class="jackpot-label">当前奖池金额（ETH）</div>
-            <div id="jackpot-amount" class="jackpot-amount">0</div>
-        </section>
-        <section class="winners-section">
-            <h2>往期中奖者</h2>
-            <div id="winners-list" class="winners-list">
-                <div class="winner-placeholder">暂无数据</div>
-            </div>
-        </section>
-        <section class="info-section">
-            <div class="info-row">
-                <span class="info-label">上次开奖时间：</span>
-                <span id="last-draw-time" class="info-value">-</span>
-            </div>
-            <div class="info-row">
-                <span class="info-label">当前总权重：</span>
-                <span id="total-weight" class="info-value">-</span>
-            </div>
-            <div class="info-row">
-                <span class="info-label">我的权重：</span>
-                <span id="user-weight" class="info-value">-</span>
-            </div>
-        </section>
+    <div class="main-flex-container">
+        <div class="left-panel">
+            <header>
+                <h1>ETH Lucky Pool</h1>
+            </header>
+            <section class="jackpot-section">
+                <div class="jackpot-label">Current Jackpot (ETH)</div>
+                <div id="jackpot-amount" class="jackpot-amount">0</div>
+            </section>
+            <section class="info-section">
+                <div class="info-row">
+                    <span class="info-label">Last Draw Time:</span>
+                    <span id="last-draw-time" class="info-value">-</span>
+                </div>
+                <div class="info-row">
+                    <span class="info-label">Total Weight:</span>
+                    <span id="total-weight" class="info-value">-</span>
+                </div>
+                <div class="info-row">
+                    <span class="info-label">My Weight:</span>
+                    <span id="user-weight" class="info-value">-</span>
+                </div>
+            </section>
+        </div>
+        <div class="right-panel">
+            <section class="winners-section">
+                <h2>Recent Winners</h2>
+                <div id="winners-list" class="winners-list">
+                    <div class="winner-placeholder">No Data</div>
+                </div>
+            </section>
+        </div>
     </div>
     <script src="app.js"></script>
 </body>
